plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.openapi.generator' version '7.3.0'
}

group = 'com.rest'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.google.code.gson:gson:2.8.8'
	// Springfox Swagger 2
	//implementation 'io.springfox:springfox-boot-starter:3.0.0'

	//the exclude was added for schema.required field
	implementation('io.springfox:springfox-swagger2:3.0.0') {
		exclude group: 'io.swagger.core.v3', module: 'swagger-annotations'
	}
	implementation 'io.swagger.core.v3:swagger-core-jakarta:2.2.7'

	//add for generating openapi classes from swagger schemas
	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'javax.annotation:javax.annotation-api:1.3.2'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'

	implementation 'org.openapitools:jackson-databind-nullable:0.2.1'
	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testCompileOnly 'org.projectlombok:lombok:1.18.30'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
openApiGenerate {
	generatorName = 'spring'
	inputSpec = "$rootDir/src/main/resources/timerApi.yaml"
	outputDir = "$buildDir/generated"
	apiPackage = "com.schemas.timerRest"
	modelPackage = "com.schemas.modelRest"
	apiNameSuffix = "Rest"

	configOptions = [
			openApiNullable: 'false',
			interfaceOnly: 'true'
	]
}

//schemas are generated under build/generated in gradlew script.
// making build/generated as path in the sources set will allow my classes under src/main/java
//to import classes from build/generated
sourceSets {
	main {
		java {
			srcDirs = ['src/main/java', 'build/generated'] // Add the generated resources folder
		}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
